# ross-configurator

./: Cargo.toml  README.md  config.ross
src/: event_type.rs  get_devices.rs  get_info.rs  get_programmer.rs  lib.rs  main.rs  ross_configurator.rs  ross_serial.rs  send_event.rs  set_device_address.rs  update_firmware.rs  upgrade_config.rs  upgrade_firmware.rs
