[package]
name = "ross-configurator"
version = "1.0.0"
authors = ["Linas Nikiperavičius <linas@linasdev.com>"]
edition = "2018"
license-file = "LICENSE.md"
description = "Configurator for the Rusty Old Smart System"
repository = "https://github.com/linasdev/ross-configurator"
readme = "README.md"

[dependencies]
serialport = "4.0.1"
clap = "2.33.3"
parse_int = "0.5.0"
ross-dsl = "2.9.0"
ross-config = "2.8.0"

[dependencies.ross-protocol]
version = "1.19.0"
features = ["std"]
