[package]
name = "ross-configurator"
version = "1.5.0"
authors = ["Linas Nikiperavičius <linas@linasdev.com>"]
edition = "2018"
license-file = "LICENSE.md"
description = "Configurator for the Rusty Old Smart System"
repository = "https://github.com/linasdev/ross-configurator"
readme = "README.md"

[dependencies]
serialport = "4.0.1"
clap = "2.33.3"
parse_int = "0.5.0"
ross-dsl = "2.20.0"
ross-config = "2.25.0"

[dependencies.ross-protocol]
version = "2.4.1"
features = ["std"]

[lib]
name = "ross_configurator"
path = "src/lib.rs"

[[bin]]
name = "ross_configurator"
path = "src/main.rs"
